# DocForge

./: Dockerfile  README.md  bootstrap_action_plan.md  changes.md  pyproject.toml
app/: main.py
dev_docs/: docforge-architecture.md  docforge-langgraph-pipeline.md
docs/dev_docs/: docforge-architecture.md  docforge-developer-guide.md  docforge-langgraph-pipeline.md
